package org.example.InterfaceNature;

import org.example.Nature.Nature;

public interface InterfaceNature {
    public void do_action(Nature o, String action);
}
